force-app/main/default/objects/LLC_BI__Dimension_Definition__c/LLC_BI__Dimension_Definition__c.object-meta.xml
<CustomObject>
    <description>This object defines the dimensions available with each policy type and specifies where the dimension pulls data from in the nCino BOS.</description>
    <label>Dimension Definition</label>
    <nameField>
        <label>Dimension Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>