force-app/main/default/objects/LLC_BI__Dimension_Definition__c/fields/FieldMap__c.field-meta.xml
<CustomField>
    <fullName>FieldMap__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Test Lookup Relationship with Field map</description>
    <label>Field Map</label>
    <referenceTo>LLC_BI__Field_Map__c</referenceTo>
    <relationshipLabel>Dimension Definitions</relationshipLabel>
    <relationshipName>Dimension_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>