force-app/main/default/objects/LLC_BI__Dimension_Definition__c/fields/LLC_BI__Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Policy_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Administrators populate this required lookup field to set the associated policy type. By default, the value is blank.</description>
    <inlineHelpText>Select a policy type.</inlineHelpText>
    <label>Policy Type</label>
    <referenceTo>LLC_BI__Policy_Type__c</referenceTo>
    <relationshipLabel>Dimension Definitions</relationshipLabel>
    <relationshipName>Dimension_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>