force-app/main/default/objects/LLC_BI__Dimension_Definition__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>Administrators populate this required picklist field to set the dimension type for all dimensions associated to this dimension definition. By default, the value is blank.</description>
    <inlineHelpText>Select a dimension type.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuous: Numeric</fullName>
            </value>
            <value>
                <fullName>Discrete: Values/Groupable</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
            <value>
                <fullName>Result Column</fullName>
            </value>
            <value>
                <fullName>Non-Lookup</fullName>
                <isActive>false</isActive>
                <label>Non-Lookup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>